[FIX] cg: add prettier-ignore for code balise XML

--- a/code_generator/views/code_generator.xml
+++ b/code_generator/views/code_generator.xml
@@ -239,10 +239,7 @@
         <field name="model_id" ref="model_code_generator_module" />
         <field name="binding_model_id" ref="model_code_generator_module" />
         <field name="state">code</field>
-        <field name="code">
-            if records:
-    action = {"type": "ir.actions.act_url", "target": "self", "url": "/code_generator/%s" % ','.join(records.mapped(lambda
-            r: str(r.id)))}
-        </field>
+        <!-- prettier-ignore-start --><field name="code">if records:
+    action = {"type": "ir.actions.act_url", "target": "self", "url": "/code_generator/%s" % ','.join(records.mapped(lambda r: str(r.id)))}</field><!-- prettier-ignore-end -->
     </record>
 </odoo>
