--- a/code_generator_db_servers/views/code_generator.xml
+++ b/code_generator_db_servers/views/code_generator.xml
@@ -220,11 +220,9 @@
         <field name="model_id" ref="model_code_generator_db_table" />
         <field name="binding_model_id" ref="model_code_generator_db_table" />
         <field name="state">code</field>
-        <field name="code">
-            if records:
+<!-- prettier-ignore-start --><field name="code">if records:
     records.generate_module()
-    # action = {"type": "ir.actions.client", "tag": "reload", "params": {"menu_id": env.ref('code_generator.code_generator_generator_menu').id}}
-        </field>
+    # action = {"type": "ir.actions.client", "tag": "reload", "params": {"menu_id": env.ref('code_generator.code_generator_generator_menu').id}}</field><!-- prettier-ignore-end -->
     </record>
 
     <record model="ir.actions.server" id="code_generator_db_table_toggle_nomenclators_actionserver">
@@ -232,9 +230,7 @@
         <field name="model_id" ref="model_code_generator_db_table" />
         <field name="binding_model_id" ref="model_code_generator_db_table" />
         <field name="state">code</field>
-        <field name="code">
-            if records:
-    records.toggle_nomenclator()
-        </field>
+<!-- prettier-ignore-start --><field name="code">if records:
+    records.toggle_nomenclator()</field><!-- prettier-ignore-end -->
     </record>
 </odoo>
