--- a/code_generator/views/code_generator_module.xml
+++ b/code_generator/views/code_generator_module.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
-    <record model="ir.ui.view" id="code_generator_module_form">
+    <record id="code_generator_module_form" model="ir.ui.view">
         <field name="name">code.generator.module.form</field>
         <field name="model">code.generator.module</field>
-        <field name="mode">primary</field>
         <field name="inherit_id" ref="base.module_form" />
+        <field name="mode">primary</field>
         <field name="arch" type="xml">
             <form position="attributes">
                 <attribute name="create">1</attribute>
@@ -218,21 +218,6 @@
             <p>Module whose content will be export into code</p>
         </field>
     </record>
-
-    <menuitem
-        id="code_generator_main_menu"
-        name="Code Generator"
-        web_icon="code_generator,static/description/icon.png"
-    />
-
-    <menuitem
-        id="code_generator_generator_menu"
-        name="Modules"
-        parent="code_generator_main_menu"
-        action="code_generator_module_actionwindow"
-        groups="code_generator_manager"
-        sequence="2"
-    />
 
     <record model="ir.actions.server" id="code_generator_module_actionserver">
         <field name="name">Generate code</field>
